--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta name = "viewport" content = "width = device-width, initial-scale=1.0">
 		<meta name = "description" content = "A website meant for you to register or join the Soccer tournament hosted at UJ also University of Jamestown">
 		<meta name = "keywords" content = "coronavirus, 'age groups', register, guidline, Individual, U10, U13, 16, U19, UJ, Soccer, tournament, affiliate, personal, health, participation">
-		<link rel = "stylesheet" type = "text/css" href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/SoccerTournament.css">
-		<link rel = "icon" type = "image/x-icon" href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/UJIcon.ico">
+		<link rel = "stylesheet" type = "text/css" href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/SoccerTournament.css">
+		<link rel = "icon" type = "image/x-icon" href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/UJIcon.ico">
 		<title> Soccer Tournament </title>
 	</head>
 	
@@ -15,22 +15,22 @@
 	<div id = "wrapper">
 		<header>
 		<div id = "topRow">
-			<img src = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/GirlKickingABall.jpg" alt = "Girl Kicking A Ball" id = "topLeftImage" width = "200"> 					
-			<img src = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/UJLogo.jpg" alt = "UJ Logo" id = "topRightImage" width = "200">
+			<img src = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/GirlKickingABall.jpg" alt = "Girl Kicking A Ball" id = "topLeftImage" width = "200"> 					
+			<img src = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/UJLogo.jpg" alt = "UJ Logo" id = "topRightImage" width = "200">
 			<h1> &nbsp; UJ SOCCER TOURNAMENT </h1>
 		</div>
 		</header>
 		
-		<div id = "navAndMain">	<nav> <ul> <li> <a href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/index.html"> HOME </a> </li>
-			<li> <a href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registration.html"> REGISTRATION GUIDELINES </a> </li>
-			<li> <a href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerClub.html"> REGISTER CLUB </a> </li>
-			<li> <a href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerIndividual.html"> REGISTER INDIVIDUAL </a> </li> </ul>
+		<div id = "navAndMain">	<nav> <ul> <li> <a href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/index.html"> HOME </a> </li>
+			<li> <a href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registration.html"> REGISTRATION GUIDELINES </a> </li>
+			<li> <a href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerClub.html"> REGISTER CLUB </a> </li>
+			<li> <a href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerIndividual.html"> REGISTER INDIVIDUAL </a> </li> </ul>
 		</nav>
 		
 		<main>
 		<div id = "mainPage" class = "indexPage">
-			<aside> <a href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registration.html">
-			<img src = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/RegisterButton.png" alt = "Register Button" width = "180"> </a> </aside> 
+			<aside> <a href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registration.html">
+			<img src = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/RegisterButton.png" alt = "Register Button" width = "180"> </a> </aside> 
 			<p> 
 				This year's season starts late due to the Novel Coronavirus.
 				However, soccer is here to stay and we are open again for yet another tournament!! <br> <br>
@@ -43,7 +43,7 @@
 					Children born 2010 or later. <br>
 					Registration Fee: $60.
 				</p>
-				<img id = "u10image" src = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/images/tenYearOld.jpg" alt = "Ten year old playing Soccer" width = "375">				
+				<img id = "u10image" src = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/images/tenYearOld.jpg" alt = "Ten year old playing Soccer" width = "375">				
 			</li>	
 			
 			<li id = "u13details">
@@ -52,7 +52,7 @@
 					Children born 2007 - 2010. <br>
 					Registration Fee: $90.
 				</p>
-				<img id = "u13image" src = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/images/13YearOld.jpg" alt = "Thirteen year old playing Soccer" width = "375">
+				<img id = "u13image" src = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/images/13YearOld.jpg" alt = "Thirteen year old playing Soccer" width = "375">
 			</li>
 			
 			<li id = "u16details">
@@ -61,7 +61,7 @@
 					Children born 2004 - 2006. <br>
 					Registration Fee: $120.
 				</p>
-				<img id = "u16image" src = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/images/16YearOld.jpg" alt = "Sixteen year old playing Soccer" width = "375">
+				<img id = "u16image" src = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/images/16YearOld.jpg" alt = "Sixteen year old playing Soccer" width = "375">
 			</li>
 			
 			<li id = "u19details">
@@ -70,7 +70,7 @@
 					Children born 2001 - 2003. <br>
 					Registration Fee: $150.
 				</p>
-				<img id = "u19image" src = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/images/19YearOld.jpeg" alt = "Nineteen year old playing Soccer" width = "375" >
+				<img id = "u19image" src = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/images/19YearOld.jpeg" alt = "Nineteen year old playing Soccer" width = "375" >
 			</li>	</ul>	
 
 			<p> Parents are encouraged to attend!! </p>
