--- a/registerIndividual.html
+++ b/registerIndividual.html
@@ -6,8 +6,8 @@
 		<meta name = "viewport" content = "width = device-width, initial-scale=1.0">
 		<meta name = "description" content = "Signing up or registering individually for the UJ also University of Jamestown Soccer Tournament is done here">		
 		<meta name = "keywords" content = "register, guidline, Individual, U10, U13, 16, U19, UJ, Soccer, tournament, affiliate, personal, health, participation">
-		<link rel = "stylesheet" type = "text/css" href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/SoccerTournament.css">
-		<link rel = "icon" type = "image/x-icon" href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/UJIcon.ico">
+		<link rel = "stylesheet" type = "text/css" href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/SoccerTournament.css">
+		<link rel = "icon" type = "image/x-icon" href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/UJIcon.ico">
 		<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"> </script>
 		<script src = "https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.min.js">  </script>
 		<script>
@@ -43,22 +43,22 @@
 	
 	<body>
 	<div id = "wrapper">
-		<header><div id = "topRow"> <img src = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/GirlKickingABall.jpg" alt = "Girl Kicking A Ball" id = "topLeftImage" width = "200"> 					
-				<img src = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/UJLogo.jpg" alt = "UJ Logo" id = "topRightImage" width = "200">
+		<header><div id = "topRow"> <img src = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/GirlKickingABall.jpg" alt = "Girl Kicking A Ball" id = "topLeftImage" width = "200"> 					
+				<img src = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/UJLogo.jpg" alt = "UJ Logo" id = "topRightImage" width = "200">
 				<h1> &nbsp; UJ SOCCER TOURNAMENT </h1>
 			</div>
 		</header>
 		
 		<div id = "navAndMain"><nav><ul>
-			<li> <a href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/index.html"> HOME </a> </li>
-			<li> <a href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registration.html"> REGISTRATION GUIDELINES </a> </li>
-			<li> <a href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerClub.html"> REGISTER CLUB </a> </li>
-			<li> <a href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerIndividual.html"> REGISTER INDIVIDUAL </a> </li></ul>
+			<li> <a href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/index.html"> HOME </a> </li>
+			<li> <a href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registration.html"> REGISTRATION GUIDELINES </a> </li>
+			<li> <a href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerClub.html"> REGISTER CLUB </a> </li>
+			<li> <a href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerIndividual.html"> REGISTER INDIVIDUAL </a> </li></ul>
 		</nav>
 		
 		<main><div id = "mainPage"> 
 			<p> Only Register here if you are not affiliated with any Club! Otherwise,
-			<a href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerClub.html"> Register Club </a>. </p> 
+			<a href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerClub.html"> Register Club </a>. </p> 
 			
 			<p> Fields marked with * are required </p>
 			<form name = "registerIndividual" id = "registerIndividual" method = "post" action = "#" onsubmit = "return AlertMessage();">
