--- a/registration.html
+++ b/registration.html
@@ -6,23 +6,23 @@
 		<meta name = "viewport" content = "width = device-width, initial-scale=1.0">
 		<meta name = "description" content = "This webpage gives instructions on how to sign up or register for the UJ also University of Jamestown Soccer Tournament">
 		<meta name = "keywords" content = "register, 'league A', 'league B', guidline, squad, Individual, club, UJ, Soccer, tournament">
-		<link rel = "stylesheet" type = "text/css" href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/SoccerTournament.css">
-		<link rel = "icon" type = "image/x-icon" href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/UJIcon.ico">
+		<link rel = "stylesheet" type = "text/css" href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/SoccerTournament.css">
+		<link rel = "icon" type = "image/x-icon" href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/UJIcon.ico">
 		
 	</head>
 	
 	<body>
 	<div id = "wrapper">
-		<header><div id = "topRow"> <img src = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/GirlKickingABall.jpg" alt = "Girl Kicking A Ball" id = "topLeftImage" width = "200"> 					
-				<img src = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/UJLogo.jpg" alt = "UJ Logo" id = "topRightImage" width = "200">
+		<header><div id = "topRow"> <img src = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/GirlKickingABall.jpg" alt = "Girl Kicking A Ball" id = "topLeftImage" width = "200"> 					
+				<img src = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/Images/UJLogo.jpg" alt = "UJ Logo" id = "topRightImage" width = "200">
 				<h1> &nbsp; UJ SOCCER TOURNAMENT </h1>
 			</div>
 		</header>
 		
-		<div id = "navAndMain"><nav> <ul> <li> <a href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/index.html"> HOME </a> </li>
-			<li> <a href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registration.html"> REGISTRATION GUIDELINES </a> </li>
-			<li> <a href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerClub.html"> REGISTER CLUB </a> </li>
-			<li> <a href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerIndividual.html"> REGISTER INDIVIDUAL </a> </li> </ul>
+		<div id = "navAndMain"><nav> <ul> <li> <a href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/index.html"> HOME </a> </li>
+			<li> <a href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registration.html"> REGISTRATION GUIDELINES </a> </li>
+			<li> <a href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerClub.html"> REGISTER CLUB </a> </li>
+			<li> <a href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerIndividual.html"> REGISTER INDIVIDUAL </a> </li> </ul>
 		</nav>
 		
 		<main><div id = "mainPage" class = "registrationPage"> 
@@ -32,8 +32,8 @@
 				<li> League A is meant for Registered Soccer Clubs and League B for independent players. </li>
 				<li> League B will have teams of 6 players each and the squads will be selected randomly from the registered participants</li> </ul>
 			<iframe width="560" id = "youTube" height="315" src="https://www.youtube.com/embed/6TnXJC6jJ0w?start=19"></iframe>
-			<a id = "registerClubButton" href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerClub.html"> Register Club </a>
-			<a id = "registerIndividualButton" href = "http://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerIndividual.html"> Register as Individual </a>		
+			<a id = "registerClubButton" href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerClub.html"> Register Club </a>
+			<a id = "registerIndividualButton" href = "https://jc-jics2.uj.edu/users/ezra.orina/FINAL_PROJECT/registerIndividual.html"> Register as Individual </a>		
 		</div>					
 		</main></div>
 		
